0.8.0/_sources/generated/statsmodels.tsa.statespace.sarimax.SARIMAX.rst.txt
statsmodels.tsa.statespace.sarimax.SARIMAX
==========================================

.. currentmodule:: statsmodels.tsa.statespace.sarimax

.. autoclass:: SARIMAX

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~SARIMAX.filter
    
    
      ~SARIMAX.fit
    
    
      ~SARIMAX.from_formula
    
    
      ~SARIMAX.hessian
    
    
      ~SARIMAX.impulse_responses
    
    
      ~SARIMAX.information
    
    
      ~SARIMAX.initialize
    
    
      ~SARIMAX.initialize_approximate_diffuse
    
    
      ~SARIMAX.initialize_known
    
    
      ~SARIMAX.initialize_state
    
    
      ~SARIMAX.initialize_statespace
    
    
      ~SARIMAX.initialize_stationary
    
    
      ~SARIMAX.loglike
    
    
      ~SARIMAX.loglikeobs
    
    
      ~SARIMAX.observed_information_matrix
    
    
      ~SARIMAX.opg_information_matrix
    
    
      ~SARIMAX.predict
    
    
      ~SARIMAX.prepare_data
    
    
      ~SARIMAX.score
    
    
      ~SARIMAX.score_obs
    
    
      ~SARIMAX.set_conserve_memory
    
    
      ~SARIMAX.set_filter_method
    
    
      ~SARIMAX.set_inversion_method
    
    
      ~SARIMAX.set_smoother_output
    
    
      ~SARIMAX.set_stability_method
    
    
      ~SARIMAX.simulate
    
    
      ~SARIMAX.smooth
    
    
      ~SARIMAX.transform_jacobian
    
    
      ~SARIMAX.transform_params
    
    
      ~SARIMAX.untransform_params
    
    
      ~SARIMAX.update
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~SARIMAX.endog_names
      ~SARIMAX.exog_names
      ~SARIMAX.initial_design
      ~SARIMAX.initial_selection
      ~SARIMAX.initial_state_intercept
      ~SARIMAX.initial_transition
      ~SARIMAX.initial_variance
      ~SARIMAX.initialization
      ~SARIMAX.loglikelihood_burn
      ~SARIMAX.model_latex_names
      ~SARIMAX.model_names
      ~SARIMAX.model_orders
      ~SARIMAX.param_names
      ~SARIMAX.param_terms
      ~SARIMAX.params_complete
      ~SARIMAX.start_params
      ~SARIMAX.tolerance
   
   